[test #179] 인사 평가 기준 조회 기능 테스트 코드 구현